my-app/src/App.css
@import url("https://fonts.googleapis.com/css?family=Poppins:wght@300;400;500;600;700;800;900;900&display=swap");


/*navbar*/
.custom-navbar {
  position: sticky;
  top: 0;
  z-index: 1000; /* Ensure it stays on top of other content */
  backdrop-filter: blur(0px); /* Start with no blur */
  background-color: transparent; /* Fully transparent background */
  transition: backdrop-filter 0.3s ease, background-color 0.3s ease; /* Smooth transition for both */
}

.custom-navbar.scrolled {
  backdrop-filter: blur(10px); /* Add blur when scrolled */
  background-color: rgba(255, 255, 255, 0.235); /* Slightly opaque background when scrolled */
}

.navbar-nav .nav-link {
  color: #000; /* Adjust link color for better visibility */
}

.navbar-toggler {
  border-color: rgba(255, 255, 255, 0.5); /* Change the border color of the toggler */
}

.custom-navbar .navbar-brand {
  font-size: 1.5rem; /* Adjust font size for the brand logo */
}

.custom-navbar .navbar-nav .nav-link {
  font-size: 1.2rem; /* Adjust font size for nav links */
  margin-left: 30px; /* Space between logo and nav links */
}

.custom-navbar .navbar {
  padding-left: 15px; /* Optional: Add padding to the left of the navbar */
}



 

/* parralax */


* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}

body {
  background: #f9f9f9;
  min-height: 100vh;
  overflow-x: hidden;
}

.parallax {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  overflow: hidden;
}

#text {
  position: absolute;
  font-size: 5em;
  color: #fff;
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
  pointer-events: none;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%); /* Centering text */
}

/* Ensuring images cover the full viewport and stay behind the text */
.parallax img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover; /* Ensures the image covers the entire section */
  pointer-events: none;
}

/* Styling for the section after the parallax */
.sec {
  position: relative;
  background: #003329;
  padding: 100px;
}

.sec h2 {
  font-size: 3em;
  color: #fff;
  margin-bottom: 10px;
}

.sec p {
  font-size: 1em;
  color: #fff;
  font-weight: 300;
}

/* Responsive adjustments */
@media screen and (max-width: 768px) {
  #text {
    font-size: 3em; /* Reduce text size for smaller screens */
  }
}

@media screen and (max-width: 480px) {
  #text {
    font-size: 2em; /* Further reduce text size for extra small screens */
  }
}

